--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,9 @@
     <color name="newStatusBarColor">#e0e0e0</color>
     <color name="buttonColor">#d6d7d7</color>
     <color name="backColor">#fafafa</color>
+    <color name="holoDark">#040405</color>
+    <color name="background_material_light">#e8e8e8</color>
+    <color name="primary_dark_material_light">#bebebe</color>
+    <color name="primary_material_light">#4285f4</color>
+    <color name="status">#f53367d6</color>
 </resources>
