--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <style name="MaterialLight" parent="android:Theme.Holo">
+    <style name="MaterialLight" parent="@style/Theme.AppCompat">
 
     </style>
 
